<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_subscription_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSubscriptionFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:text="@string/hello_blank_fragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/subscription_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/price_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:text="00,00 ₽" />



            <RelativeLayout
                android:id="@+id/title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-medium"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/good_title"
                    android:textColor="#de000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/title_text_value"
                    style="?android:attr/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:text="Netflix" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/desc_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_container"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/desc_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-medium"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/good_description"
                    android:textColor="#de000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/desc_value"
                    style="?android:attr/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="Уникальная коробока из крафтовой бумаги для ваашего праздника" />

            </LinearLayout>



            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/duration_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/period_container"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/duration_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-medium"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:lineSpacingExtra="8sp"
                    android:textColor="#de000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/duration_value"
                    style="?android:attr/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    tools:text="1 Год" />

            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/notify_me_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/duration_container"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notify_me_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-medium"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:lineSpacingExtra="8sp"

                    android:textColor="#de000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/notify_value"
                    style="?android:attr/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:text="1 Год" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/currency_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notify_me_container"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/currency_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-medium"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/currency"
                    android:textColor="#de000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/currency_value"
                    style="?android:attr/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:editable="false"
                    android:enabled="false"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@string/rub_currency" />

            </RelativeLayout>

            <Button
                android:id="@+id/add_subscription"
                android:layout_marginTop="32dp"
                android:layout_below="@id/currency_container"
                android:layout_centerHorizontal="true"
                android:text="Купить"
                android:background="@drawable/button_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>